--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <div class="p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">Pagrindinis</h1>
-        <p class="fs-5 text-muted">Pagrindinis puslapis.</p>
+        <h1 class="display-4 fw-normal">Pranešimas</h1>
+        <p class="fs-5 text-muted">Pranešimo puslapis.</p>
     </div>
 {% endblock %}
 
