--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -1,9 +1,63 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">Apie</h1>
-        <p class="fs-5 text-muted">Apie puslapis.</p>
+    <div class="container">
+    <br>
+        <div class="row">
+            <div class="col-xl-12">
+                <h1>Apie mus</h1>
+                <p>
+                    Lietuvoje vis dar egzistuoja opi problema, susijusi su grėsmę keliančia kelių kokybe. Duobės,
+                    provėžos, kiti nelygumai bei išblukusios kelių juostos, neretai sudaro pavojingas sąlygas eismo
+                    dalyviams ir/ar pažeidžia jų transporto priemones. Remiantis „Lietuvos draudimo“ duomenimis, per
+                    pirmuosius tris 2021 metų mėnesius, buvo išmokėta daugiau nei 67 tūkst. Eur. žalos, nukentėjusiems
+                    dėl duobių kelyje. Ši problema aktuali ne tik vairuotojams, bet ir savivaldybėms, atsakingoms už
+                    kelių tvarkymą, darbų pavedimą kelių priežiūros institucijoms.
+                </p>
+
+                <p>
+                    Gyventojai nuolat skatinami pranešti
+                    apie kelyje esančius pavojus, tačiau patvirtinti, jog apie visus kelių kokybės trūkumus pranešama,
+                    negalima. Siekiant užtikrinti, jog visos duobės bei netinkamos kelio juostos būtų užfiksuojamos, buvo
+                    priimta idėja kurti programinę įrangą, dirbtinio intelekto pagalba atpažįstančią minėtuosius objektus.
+                    Tuo pačiu pateikiama tiksli informacija apie duobių ir/ar netinkamų kelių juostų buvimo koordinates.
+                    Siekiant užtikrinti sklandų projekto vystymą, buvo išsikeltas projekto tikslas, uždaviniai, veiklos bei
+                    siektini rezultatai.
+                </p>
+            </div>
+
+            <hr>
+
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">IDĖJOS IŠPILDYMAS</h5>
+                        <p class="card-text">Siekiant išpildyti minėtąją idėją, sukurta programinė įranga, atliekanti automatinį kelio kokybės
+                            trūkumų aptikimą, pasitelkiant dirbtinį intelektą. Informacinėje sistemoje registruojami dirbtinio
+                            intelekto aptikti kelio kokybės trūkumai, duomenys prieinami visiems sistemos naudotojams, t.y.
+                            Lietuvos savivaldybių kelių tvarkymo darbų užsakovams bei darbų rangovams.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
