--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,12 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     {% block navigation %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-{#                <a class="navbar-brand" href="{{ path('warehouse_main') }}">Pirketa</a>#}
+                <a class="navbar-brand">ඞ</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -18,17 +19,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('main') }}">Pagrindinis</a>
+                            <a class="nav-link" href="{{ path('main') }}">PAGRINDINIS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('about') }}">Apie</a>
+                            <a class="nav-link" href="{{ path('about') }}">APIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('map') }}">Žemėlapis</a>
+                            <a class="nav-link" href="{{ path('map') }}">ŽEMĖLAPIS</a>
                         </li>
-{#                        <li class="nav-item">#}
-{#                            <a class="nav-link" href="{{ path('report') }}">Pranešk</a>#}
-{#                        </li>#}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('report') }}">PRANEŠK</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -36,8 +37,20 @@
     {% endblock %}
 </head>
 <body>
-{% block body %}
+    <div class="container-scroller d-flex flex-column min-vh-100">
+    {% block body %}
 
-{% endblock %}
+    {% endblock %}
+    </div>
+
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022 Visos teisės saugomos. (K042 PVP modulio gr.)
+        </div>
+        <!-- Copyright -->
+    </footer>
 </body>
+
+
 </html>
