--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -1,12 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">Pranešimas</h1>
-        <p class="fs-5 text-muted">Pranešimo puslapis.</p>
+    <div class="main-panel">
+        <div class="container">
+            <div class="row sm-3 align-items-center">
+                <form method="post" action="/report/submit">
+                    <div class="form-control-sm">
+                        <label for="username">Vardas</label>
+                        <input type="text" class="form-control" name="username" id="username">
+                    </div>
+                    <div class="form-control-sm">
+                        <label for="phone">Telefono nr.</label>
+                        <input type="text" class="form-control" name="phone" id="phone">
+                    </div>
+                    <div class="form-control-sm">
+                        <label for="email">El. paštas</label>
+                        <input type="text" class="form-control" name="email" id="email">
+                    </div>
+                    <div class="form-control-sm">
+                        <label for="address">Vietos adresas</label>
+                        <input type="password" class="form-control" name="address" id="address">
+                    </div>
+                    <button type="submit" class="btn btn-success">Pranešti</button>
+                </form>
+            </div>
+        </div>
     </div>
 {% endblock %}
-
 
 {% block navigation %}
     {{ parent() }}
