--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     {% block navigation %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand">ඞ</a>
+                <a class="navbar-brand text-light font-weight-bold">ඞ</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,26 +19,26 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('main') }}">PAGRINDINIS</a>
+                            <a class="nav-link text-light" href="{{ path('main') }}">PAGRINDINIS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('about') }}">APIE</a>
+                            <a class="nav-link text-light" href="{{ path('about') }}">APIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('map') }}">ŽEMĖLAPIS</a>
+                            <a class="nav-link text-light" href="{{ path('map') }}">ŽEMĖLAPIS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('report') }}">PRANEŠK</a>
+                            <a class="nav-link text-light" href="{{ path('report') }}">PRANEŠK</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <br>
+{#        <br>#}
     {% endblock %}
 </head>
 <body>
-    <div class="container-scroller d-flex flex-column min-vh-100">
+    <div class="d-flex flex-column min-vh-100">
     {% block body %}
 
     {% endblock %}
