--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -8,6 +8,15 @@
             <h1 class="display-4 fw-normal">Administratoriaus sąsajos prisijungimas</h1>
         </div>
         <div class="row sm-3 align-items-center">
+
+            {% if errors|default(null) %}
+                <div class="alert alert-danger" role="alert">
+                    {% for err in errors %}
+                        {{ err }} <br>
+                    {% endfor %}
+                </div>
+            {% endif %}
+
             <section class="vh-100">
                 <div class="container-fluid h-custom">
                     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -18,16 +27,16 @@
                         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                             <form method="post" action="/admin/login">
                                 <!-- Email input -->
-{#                                <div class="form-outline mb-4">#}
-{#                                    <input type="email" id="email" class="form-control form-control-lg"#}
-{#                                           placeholder="Įveskite administratoriaus el. paštą" />#}
-{#                                    <label class="form-label" for="email">El. paštas</label>#}
-{#                                </div>#}
-
                                 <div class="form-outline mb-4">
-                                    <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Įveskite administratoriaus vartotojo vardą" />
-                                    <label class="form-label" for="username">Vartotojas</label>
+                                    <input type="email" id="email" name="email" class="form-control form-control-lg"
+                                           placeholder="Įveskite administratoriaus el. paštą" />
+                                    <label class="form-label" for="email">El. paštas</label>
                                 </div>
+
+{#                                <div class="form-outline mb-4">#}
+{#                                    <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Įveskite administratoriaus vartotojo vardą" />#}
+{#                                    <label class="form-label" for="username">Vartotojas</label>#}
+{#                                </div>#}
 
                                 <!-- Password input -->
                                 <div class="form-outline mb-3">
