--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -5,53 +5,30 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
-                <h1>APIE MUS</h1>
-                <p>
-                    Lietuvoje vis dar egzistuoja opi problema, susijusi su grėsmę keliančia kelių kokybe. Duobės,
-                    provėžos, kiti nelygumai bei išblukusios kelių juostos, neretai sudaro pavojingas sąlygas eismo
-                    dalyviams ir/ar pažeidžia jų transporto priemones. Ši problema aktuali ne tik vairuotojams, bet ir savivaldybėms, atsakingoms už
-                    kelių tvarkymą, darbų pavedimą kelių priežiūros institucijoms.
+                <h1 class="text-center">APIE MUS</h1>
+                <p class="text-center">
+                    ROADCHECK prasidėjo nuo idėjos sukurti programinę įrangą, kuri galėtų prisidėti prie nuolatinės kelių būklės priežiūros.
+                    Tam, įvykdyti šį tikslą, buvo pasitelkta dirbtinio intelekto techonologios kartu su aukštos kokybės kameromis, kurių
+                    dėka kokybės aptikimas yra greitas, patikimas ir automatiškas.
                 </p>
 
-                <p>
-                     Siekiant užtikrinti, jog visos duobės bei netinkamos kelio juostos būtų užfiksuojamos, buvo
-                    priimta idėja kurti programinę įrangą, dirbtinio intelekto pagalba atpažįstančią minėtuosius objektus.
-                    Tuo pačiu pateikiama tiksli informacija apie duobių ir/ar netinkamų kelių juostų buvimo koordinates.
-                    Siekiant užtikrinti sklandų projekto vystymą, buvo išsikeltas projekto tikslas, uždaviniai, veiklos bei
-                    siektini rezultatai.
+                <p class="text-center">
+                    Programinės įrangos tikslas - automatiniu būdu atpažinti duobes kelyje, užfiksuoti tikslias koordinates ir
+                    turimus duomenis persiųsti atitinkamoms institucijoms.
                 </p>
             </div>
 
             <hr>
 
-            <div class="row">
-                <div class="col-sm-4 flex-row">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Aktuali problema</h5>
-                            <p class="card-text">Remiantis „Lietuvos draudimo“ duomenimis, per
-                                pirmuosius tris 2021 metų mėnesius, buvo išmokėta daugiau nei 67 tūkst. eur. žalos nukentėjusiems
-                                dėl duobių kelyje.</p>
-                        </div>
-                    </div>
+            <div class="row" style="background: black;color: white;padding: 30px;">
+                <div class="col-sm-6 flex-row">
+                    <a href="/map"><img src="assets/img1.png" class="card-img" alt="..."></a>
+
                 </div>
 
-                <div class="col-sm-4 flex-row">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Dirbtinis intelektas</h5>
-                            <p class="card-text">Kelio kokybei vertinti naudojamas dirbtinis intelektas, kuris yra apmokytas aptikti duobes, esančias kelyje.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 flex-row">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Duobių pranešimas</h5>
-                            <p class="card-text">Sprendžiant iš atliktų apklausų rezultatų didžioji dalis gyventojų ir automobilių naudotojų apie duobes ar prastą kelio kokybę - nepraneša.</p>
-                        </div>
-                    </div>
+                <div class="col-sm-3 flex-row" style="margin-top: 150px;">
+                    <h5 class="card-title">Jūs taip pat galite prisidėti prie geresnės kelio kokybės!</h5>
+                    <p class="card-text">Pateikite informaciją apie pastebetą duobę paprasčiausiai pažymėdami ją žemėlapyje.</p>
                 </div>
             </div>
         </div>
