--- a/templates/admin/main.html.twig
+++ b/templates/admin/main.html.twig
@@ -1,13 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_admin.html.twig' %}
 
 {% block body %}
-<div class="main-panel">
-    <div class="container">
-        <div class="row sm-3 align-items-center">
 
-        </div>
-    </div>
-</div>
+
 {% endblock %}
 
 
