--- a/templates/map/index.html.twig
+++ b/templates/map/index.html.twig
@@ -9,7 +9,20 @@
             osmAttrib = 'Map data &copy; 2022 OpenStreetMap contributors (https://www.openstreetmap.org/copyright)',
             osm = new L.TileLayer(osmUrl, {maxZoom: 18, attribution: osmAttrib});
 
-        map.setView(new L.LatLng(54.911824, 23.923679), 13).addLayer(osm);
+        var lat = 54.911824;
+        var lng = 23.923679;
+        var zoom = 13;
+
+        {% if lat|default(null) %}
+            lat = {{ lat }};
+            zoom = 18;
+        {% endif %}
+        {% if long|default(null) %}
+            lng = {{ long }};
+            zoom = 18;
+        {% endif %}
+
+        map.setView(new L.LatLng(lat, lng), zoom).addLayer(osm);
 
         {% if locations|default(null) %}
             {% for loc in locations %}
@@ -25,12 +38,23 @@
             popup.setLatLng(e.latlng)
                 .setContent("You clicked the map at " + e.latlng.toString())
                 .openOn(map);
+
+            // var geocodeService = L.esri.Geocoding.geocodeService({
+            //     apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu" // replace with your api key - https://developers.arcgis.com
+            // });
+            //
+            // geocodeService.reverse().latlng(e.latlng).run(function (error, result) {
+            //     if (error) {
+            //         return;
+            //     }
+            //
+            //     console.log(result);
+            // });
         }
 
         map.on('click', onMapClick);
     </script>
 {% endblock %}
-
 
 {% block navigation %}
     {{ parent() }}
