Update base map popups. Check for empty file and fix input checking in reports. Add map selection in reports.

--- a/templates/admin/locations.html.twig
+++ b/templates/admin/locations.html.twig
@@ -66,11 +66,11 @@
                                         }
 
                                         var el = document.getElementById("address");
+                                        console.log(result);
+
                                         el.innerHTML = result.address.LongLabel;
                                         el.id = "";
                                     });
-
-
                                 </script>
 
                                 <td>
