--- a/templates/api/index.html.twig
+++ b/templates/api/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ApiController!{% endblock %}
+{% block title %}
+    API
+{% endblock %}
 
 {% block body %}
 <style>
