--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,10 @@
     <!-- Load Esri Leaflet Geocoder from CDN -->
     <script src="https://unpkg.com/esri-leaflet-geocoder@3.0.0/dist/esri-leaflet-geocoder.js"></script>
 
+    <!-- Load Leaflet Control Geocoder -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
     <script>
 
         let reverse = async (lat, long) => {
