--- a/templates/map/index.html.twig
+++ b/templates/map/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    „ROADCHECK“ | Žemėlapis
+{% endblock %}
+
 {% block body %}
     <div id="map" style="height: 100vh;"></div>
     <script type="text/javascript">
@@ -28,31 +32,34 @@
             {% for loc in locations %}
                 var marker = L.marker([{{ loc.lat }}, {{ loc.long }}]).addTo(map);
 
-                marker.bindPopup("<b>Created at {{ loc.created_at }}</b>");
+                marker.bindPopup("<b>Pranešimo data:</b> <br> {{ loc.created_at|split(".")[0] }}");
             {% endfor %}
         {% endif %}
 
         var popup = L.popup();
 
-        function onMapClick(e) {
-            popup.setLatLng(e.latlng)
-                .setContent("You clicked the map at " + e.latlng.toString())
-                .openOn(map);
+        function onMapClick(e)
+        {
+            var geocodeService = L.esri.Geocoding.geocodeService({
+                apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu" // replace with your api key - https://developers.arcgis.com
+            });
 
-            // var geocodeService = L.esri.Geocoding.geocodeService({
-            //     apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu" // replace with your api key - https://developers.arcgis.com
-            // });
-            //
-            // geocodeService.reverse().latlng(e.latlng).run(function (error, result) {
-            //     if (error) {
-            //         return;
-            //     }
-            //
-            //     console.log(result);
-            // });
+            geocodeService.reverse().latlng(e.latlng).run(function (error, result)
+            {
+                if (error)
+                {
+                    return;
+                }
+
+                popup.setLatLng(e.latlng)
+                    .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
+                    .openOn(map);
+            });
         }
 
         map.on('click', onMapClick);
+
+        L.Control.geocoder().addTo(map);
     </script>
 {% endblock %}
 
