Add titles to pages.

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    „ROADCHECK“ | Apie
+{% endblock %}
+
 {% block body %}
     <br>
     <div class="container">
@@ -8,6 +12,7 @@
                 <h1 class="text-center">APIE MUS</h1>
                 <p class="text-center">
                     ROADCHECK prasidėjo nuo idėjos sukurti programinę įrangą, kuri galėtų prisidėti prie nuolatinės kelių būklės priežiūros.
+                    <br>
                     Tam, įvykdyti šį tikslą, buvo pasitelkta dirbtinio intelekto techonologios kartu su aukštos kokybės kameromis, kurių
                     dėka kokybės aptikimas yra greitas, patikimas ir automatiškas.
                 </p>
@@ -26,7 +31,7 @@
 
                 </div>
 
-                <div class="col-sm-3 flex-row" style="margin-top: 150px;">
+                <div class="col-sm-6 flex-row" style="padding-top: 15%;">
                     <h5 class="card-title">Jūs taip pat galite prisidėti prie geresnės kelio kokybės!</h5>
                     <p class="card-text">Pateikite informaciją apie pastebetą duobę paprasčiausiai pažymėdami ją žemėlapyje.</p>
                 </div>
