--- a/templates/admin/login.html.twig
+++ b/templates/admin/login.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    „ROADCHECK“ | Administravimas
+{% endblock %}
+
 {% block body %}
 <br>
 <div class="main-panel">
