--- a/templates/admin/job_edit.html.twig
+++ b/templates/admin/job_edit.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base_admin.html.twig' %}
 
+{% block title %}
+    „ROADCHECK“ | Darbų redagavimas
+{% endblock %}
+
 {% block body %}
     <div class="content-wrapper">
         <div class="row">
