--- a/templates/admin/jobs.html.twig
+++ b/templates/admin/jobs.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base_admin.html.twig' %}
 
+{% block title %}
+    „ROADCHECK“ | Darbai
+{% endblock %}
+
 {% block body %}
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
     <div class="card">
