--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,23 +42,23 @@
 
 
     {% block navigation %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-black" style="padding-left: 42%;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black justify-content-center">
             <div class="text-center">
-                <a class="navbar-brand text-light font-weight-bold" href="{{ path('main') }}">ROADCHECK ඞ</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+{#                <a class="navbar-brand text-light font-weight-bold" href="{{ path('main') }}">ROADCHECK ඞ</a>#}
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                        aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse text-center p-2" id="navbar">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('about') }}">APIE</a>
+                            <a class="nav-link text-light" href="{{ path('about') }}">APIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('map') }}">ŽEMĖLAPIS</a>
+                            <a class="nav-link text-light" href="{{ path('map') }}">ŽEMĖLAPIS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('report') }}">PRANEŠK</a>
+                            <a class="nav-link text-light" href="{{ path('report') }}">PRANEŠK</a>
                         </li>
                     </ul>
                 </div>
@@ -74,7 +74,13 @@
     {% endblock %}
     </div>
 
+
     <footer class="bg-black text-center text-lg-start">
+
+        {% block footer %}
+
+        {% endblock %}
+
         <!-- Copyright -->
         <div class="text-center p-1 bg-black" style="font-size: 9px; color: white;">
             © 2022 Visos teisės saugomos. (K042 PVP modulio gr.)
