Add interactive map to admin panel location list. Change and improve admin panel location edit. Fix navigation bar in admin panel. Add /api/v1/getall route to get all locations. Change all "long" naming to "lng". Change queries to support geometry type data.

--- a/templates/admin/jobs.html.twig
+++ b/templates/admin/jobs.html.twig
@@ -61,7 +61,7 @@
                                         apikey: "{{ geocode_api_key }}"
                                     });
 
-                                    var latLng = L.latLng({{ job.lat }}, {{ job.long }});
+                                    var latLng = L.latLng({{ job.lat }}, {{ job.lng }});
 
                                     var address;
 
@@ -77,7 +77,7 @@
                                 </script>
 
                                 <td>
-                                    <a class="small-text" href="/map/pan/{{ job.lat }}/{{ job.long }}" target="_blank">
+                                    <a class="small-text" href="/map/pan/{{ job.lat }}/{{ job.lng }}" target="_blank">
                                         Peržiūrėti žemėlapyje
                                 </td>
 
