--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -42,7 +42,7 @@
             });
 
             document.getElementById("lat").value = e.latlng.lat;
-            document.getElementById("long").value = e.latlng.lng;
+            document.getElementById("lng").value = e.latlng.lng;
         }
 
         map.on('click', onMapClick);
@@ -89,7 +89,7 @@
                     </div>
 
                     <input type="hidden" id="lat" class="form-control" name="lat">
-                    <input type="hidden"  id="long" class="form-control" name="long">
+                    <input type="hidden"  id="lng" class="form-control" name="lng">
 
                     <div class="form-control-sm">
                         <button type="submit" class="btn btn-sm btn-success">Pranešti</button>
