--- a/templates/admin/locations.html.twig
+++ b/templates/admin/locations.html.twig
@@ -7,6 +7,50 @@
 {% block body %}
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+    <div id="map" style="height: 50vh;"></div>
+    <script type="text/javascript">
+        var map = new L.Map('map');
+
+        var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+            osmAttrib = 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">2022 OpenStreetMap contributors</a>',
+            osm = new L.TileLayer(osmUrl, {maxZoom: 19, attribution: osmAttrib});
+
+        var lat = 54.911824;
+        var lng = 23.923679;
+        var zoom = 13;
+
+        map.setView(new L.LatLng(lat, lng), zoom).addLayer(osm);
+
+        {% if locations|default(null) %}
+            {% for loc in locations %}
+                var marker = L.marker([{{ loc.lat }}, {{ loc.lng }}]).addTo(map);
+
+                marker.bindPopup("<b>Pranešimo data:</b> <br>{{ loc.created_at|split(".")[0] }}");
+            {% endfor %}
+        {% endif %}
+
+        var popup = L.popup();
+
+        function onMapClick(e)
+        {
+            var geocodeService = L.esri.Geocoding.geocodeService({
+                apikey: "AAPKfa869c04abca4be7b67082007f71bd03dIOoH9wMrdc1IacMrk1yAWkHTNv9euC84dgU3abrG8E4VDxQdBnz8r_ZN7j8c8Zu"
+            });
+
+            geocodeService.reverse().latlng(e.latlng).run((error, result) =>
+            {
+                if (error) return;
+
+                popup.setLatLng(e.latlng)
+                    .setContent("<b>Pasirinkote adresą:</b> <br> " + result.address.LongLabel)
+                    .openOn(map);
+            });
+        }
+
+        map.on('click', onMapClick);
+
+        L.Control.geocoder().addTo(map);
+    </script>
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">PAŽYMĖTOS DUOBĖS</h4>
@@ -49,7 +93,7 @@
                                 </td>
                                 </td>
                                 <td>
-                                    {{ loc.long }}
+                                    {{ loc.lng }}
                                 </td>
                                 <td id="address">
 
@@ -60,7 +104,7 @@
                                         apikey: "{{ geocode_api_key }}"
                                     });
 
-                                    var latLng = L.latLng({{ loc.lat }}, {{ loc.long }});
+                                    var latLng = L.latLng({{ loc.lat }}, {{ loc.lng }});
 
                                     var address;
 
@@ -84,7 +128,10 @@
                                 </td>
 
                                 <td>
-                                    <a class="small-text" href="/map/pan/{{ loc.lat }}/{{ loc.long }}" target="_blank">
+{#                                    <a class="small-text" href="/map/pan/{{ loc.lat }}/{{ loc.lng }}" target="_blank">#}
+{#                                        Peržiūrėti žemėlapyje#}
+{#                                    </a>#}
+                                    <a class="small-text" onclick="map.setView(new L.LatLng({{ loc.lat }}, {{ loc.lng }}), 17);">
                                         Peržiūrėti žemėlapyje
                                     </a>
                                 </td>
