--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -30,19 +30,19 @@
                         aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse text-center p-2" id="navbar">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('about') }}">APIE</a>
+                            <a class="nav-link text-light" href="{{ path('about') }}">APIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('map') }}">ŽEMĖLAPIS</a>
+                            <a class="nav-link text-light" href="{{ path('map') }}">ŽEMĖLAPIS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('report') }}">PRANEŠK</a>
+                            <a class="nav-link text-light" href="{{ path('report') }}">PRANEŠK</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" style="padding: 10px; margin: 15px;" href="{{ path('admin_main') }}">ADMINISTRAVIMAS</a>
+                            <a class="nav-link text-light" href="{{ path('admin_main') }}">ADMINISTRAVIMAS</a>
                         </li>
                     </ul>
                 </div>
@@ -55,8 +55,8 @@
     <div class="d-flex flex-column min-vh-100">
         <div class="content-wrapper">
             <div class="row" style="--bs-gutter-x: 0;">
-                <nav class="col-sm-2 d-none d-md-block bg-black sidebar">
-                    <div class="sidebar-sticky" style="font-size: 18px; height: 100vh; color: white;">
+                <nav class="col-sm-1 d-none d-md-block bg-black sidebar">
+                    <div class="sidebar-sticky" style="font-size: 15px; height: 100vh; color: white;">
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <a class="nav-link active" style="color: white;" href="{{ path("admin_main") }}">
